--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Блог о творчестве, спорте, и образе жизни</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <header class="header">
   <div class="container">
     <div class="box">
@@ -353,3 +363,5 @@
     <div class="copyright"><a href="#0" class="copyright-link">Copyright &copy; 2009-2019 City Blog LLC</a></div>
   </footer>
 </div>
+</body>
+</html>
